--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "stack-trace": "0.0.10",
     "stacktrace-js": "^2.0.2",
     "ws": "^7.3.1"
+  },
+  "devDependencies": {
+    "shadow-cljs": "^2.11.0"
   }
 }
